2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.2 released.

2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Fix i18n.

	* Version 2.1.1 released.

2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.0 released.

2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Make ru_RU translation actually work.

	* Update progress bar (sort-of) when finding subtitles (#603).

	* Make sure audio mapping view is scrollable when necessary (#597).

2015-06-12  Carl Hetherington  <cth@carlh.net>

	* Add a close button to the audio plot on Linux (#602).

	* Version 2.0.51 released.

2015-06-12  Carl Hetherington  <cth@carlh.net>

	* New ru_RU translation from Igor Voytovich.

2015-06-12  c.hetherington  <cth@carlh.net>

	* Fix for every audio stream being mapped to the DCP when loading
	old films.

2015-06-11  c.hetherington  <cth@carlh.net>

	* Fix massive slowdown of direct J2K->DCP encodes (#599).

	* Fix hang on audio analysis in some cases (#598).

	* Fix never-ending encode when XYZ values are clamped (#600).

2015-06-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.50 released.

2015-06-10  c.hetherington  <cth@carlh.net>

	* Skip audio analysis when there is no audio content (#596).

2015-06-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.49 released.

2015-06-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.48 released.

2015-06-03  Carl Hetherington  <cth@carlh.net>

	* Various fixes to subtitle rendering, including independent
	x and y scale of text subs (#489).

2015-06-02  c.hetherington  <cth@carlh.net>

	* Allow use of all content audio streams, not just
	the selected one.

	* Tweak colour conversion controls so that it's easier
	to use a preset without seeing the details.

2015-05-25  Carl Hetherington  <cth@carlh.net>

	* Block all but alphanumeric characters with a few bits
	of punctuation from DCP names.

	* Improve view of jobs in various ways.

	* Increase the number of images that DCP-o-matic will