@@ -1,3 +1,8 @@
+2015-06-14  Carl Hetherington  <cth@carlh.net>
+
+	* Add buttons to set trim from current `playhead'
+	position (#372).
+
 2015-06-13  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.2 released.
